Mon May 21 08:26:38 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* SILC Client 1.1 Beta5.

Sun May 20 18:34:22 CEST 2007  Jochen Eisinger <coffee@silcnet.org>

	* Add hooks for Irssi 0.8.11 module functions.  Affected file
	  is apps/irssi/src/fe-common/silc/fe-common-silc.c

Sat May 19 14:46:36 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* Fixed passphrase authentication with server.  Affected file
	  is lib/silcclient/client_connect.c.

	* Fixed passphrase authentication as responder.  Affected file is
	  lib/silcske/silcconnauth.c.

	* Changed SilcAskPassphrase and SilcGetAuthMeth callbacks to
	  return data as const.  Affected file is
	  lib/silcclient/silcclient.h.

	* Fixed timeout calculation in Symbian scheduler.  Affected
	  file is lib/silcutil/symbian/silcsymbianscheduler.c.

Fri May 18 21:10:38 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* Do not uninitialize u.m.threads atomic int in finish but in
	  free.  Fixes crash on any platform using atomic operations
	  using mutexes (like Symbian).  Affected file is
	  lib/silcutil/silcfsm.c.

	* Fixes Symbian scheduler wakeup synchronization.  Affected file
	  is lib/silcutil/symbian/silcsymbianscheduler.c.

Fri May 18 18:10:36 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* Fixed nickname formatting to handle already formatted nicknames
	  better.  Affected file is lib/silccilent/client_entry.c.

	* Added "foo#2 appears as foo" support to SILC Client when user
	  leaves or quits and one formatted nickname remain.  Affected file 
	  is apps/irssi/src/silc/core/client_ops.c.

	* Send SilcChannelEntry to application in SILC_NOTIFY_TYPE_SIGNOFF.
	  Affected file is lib/silcclient/client_notify.c.

Thu May 17 18:05:10 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* Fixed silc_show_public_key to not free public key in case of
	  failure.  Affected file is lib/silcapputil/silcapputil.c.

Thu May 17 17:09:50 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* SILC Toolkit 1.1 Beta3.
