@@ -29,7 +29,8 @@ silc_install_prefix=@prefix@
 #
 # Common libraries that are linked against the created executable
 #
-SILC_COMMON_LIBS= -L$(silc_top_srcdir)/lib -lsilc @LIBS@
+SILC_COMMON_LDFLAGS= @LDFLAGS@
+SILC_COMMON_LIBS= -lsilc @LIBS@
 
 #
 # Common compilation flags
