@@ -1,3 +1,12 @@
+Tue May 22 17:18:54 EEST 2007  Pekka Riikonen <priikone@silcnet.org>
+
+	* For SILC Client and SILC Server check for 1.1 Toolkit
+	  in configure.  Affected file is configure.ad.
+
+	* Added better library linking flags and orders for SILC Client.
+	  Affected file is configure.ad, Makefile.defines_int.in and
+	  apps/irssi/src/fe-text/Makefile.am
+
 Mon May 21 08:26:38 EEST 2007  Pekka Riikonen <priikone@silcnet.org>
 
 	* SILC Client 1.1 Beta5.
